# autoversion

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Pipfile  README.md  USAGE.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: dependabot.yml
docs/news/: 1.bugfix  1.feature  10.doc  12.bugfix  2.bugfix  2.feature  3.major  3.misc  35.feature  36.feature  4.major  4.misc  5.feature  7.major  infinite.feature  pyproject.toml
scripts/: autoversion.toml  release.py  requirements.txt  tag_and_release.py
src/auto_version/: __init__.py  __main__.py  __version__.py  auto_version_tool.py  cli.py  config.py  definitions.py  replacement_handler.py  semver.py  utils.py
src/auto_version/tests/: double_target.toml  example.py  example.toml  example_tool.toml  simple.toml  test_autoversion.py  test_config.py
