[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[flake8]
exclude =
    # unwanted cache items
    .git
max-complexity = 10
max-line-length = 120

[isort]
max-line-length=110
force_single_line=True

[coverage:run]
branch = true
parallel = true
omit =
    **/tests/*
[coverage:report]
[coverage:html]
title = auto_version
directory = report

[green]
verbose = 2
logging = False
processes = 1
termcolor = True
run-coverage = True
